[gd_scene load_steps=3 format=3 uid="uid://dggedqavjjn8v"]

[ext_resource type="Script" path="res://scripts/hud.gd" id="1_0ofos"]
[ext_resource type="Texture2D" uid="uid://7unigs8y5cev" path="res://assets/icons/Timer.svg" id="1_5qnnf"]

[node name="HUD" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_0ofos")

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 0.12
grow_horizontal = 2

[node name="CustomersServedLabel" type="RichTextLabel" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 0.2
bbcode_enabled = true
text = "[center]x0[/center]"
fit_content = true

[node name="LevelLabel" type="Label" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Level Name"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Control" type="Control" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.1

[node name="TimerIcon" type="TextureRect" parent="HBoxContainer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.15
anchor_top = 0.15
anchor_right = 0.85
anchor_bottom = 0.85
grow_horizontal = 2
grow_vertical = 2
texture = ExtResource("1_5qnnf")
expand_mode = 2
stretch_mode = 4

[node name="TimerLabel" type="RichTextLabel" parent="HBoxContainer"]
clip_contents = false
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
size_flags_stretch_ratio = 0.1
bbcode_enabled = true
text = "00:00"
fit_content = true
